--- a/styles.css
+++ b/styles.css
@@ -1,243 +1,664 @@
-@import url('https://fonts.googleapis.com/css?family=Montserrat:400,700,900&display=swap');
-
-:root {
-	--gradient: linear-gradient( 135deg, #72EDF2 10%, #5151E5 100%);
+*,
+*::after,
+*::before {
+	box-sizing: border-box;
 }
 
-* {
-	-webkit-box-sizing: border-box;
-	        box-sizing: border-box;
-	line-height: 1.25em;
-}
-
-.clear {
-	clear: both;
+html {
+	background: #fff;
 }
 
 body {
-	margin: 0;
-	width: 100%;
-	height: 100vh;
-	font-family: 'Montserrat', sans-serif;
-	background-color: #47289d;
-	display: -webkit-box;
-	display: -ms-flexbox;
-	display: flex;
-	-webkit-box-align: center;
-	    -ms-flex-align: center;
-	        align-items: center;
-	-webkit-box-pack: center;
-	    -ms-flex-pack: center;
-	        justify-content: center;
+	--color-text: #000;
+	--color-bg: #fff;
+	--color-link: #000;
+	--color-link-hover: #858585;
+	--color-nav-bg: #fff;
+	--color-nav-hover: #858585;
+	--color-cart-bg: #000;
+	--color-cart: #fff;
+	--color-details-hover: #858585;
+	font-family: Futura, "Trebuchet MS", Arial, sans-serif;
+	min-height: 100vh;
+	color: #57585c;
+	color: var(--color-text);
+	background-color: #fff;
+	background-color: var(--color-bg);
+	-webkit-font-smoothing: antialiased;
+	-moz-osx-font-smoothing: grayscale;
 }
 
-.container {
-	border-radius: 25px;
-	-webkit-box-shadow: 0 0 70px -10px rgba(0, 0, 0, 0.2);
-	        box-shadow: 0 0 70px -10px rgba(0, 0, 0, 0.2);
-	background-color: #222831;
-	color: #ffffff;
-	height: 400px;
+button,
+html input[type="button"],
+input[type="reset"],
+input[type="submit"] {
+	-webkit-appearance: button;
+	cursor: pointer;
 }
 
-.weather-side {
+a {
+	text-decoration: none;
+	color: var(--color-link);
+	outline: none;
+}
+
+a:hover,
+a:focus {
+	color: var(--color-link-hover);
+}
+
+button:focus,
+a:focus {
+	outline: none;
+}
+
+.hidden {
+	position: absolute;
+	overflow: hidden;
+	width: 0;
+	height: 0;
+	pointer-events: none;
+}
+
+/* Icons */
+.icon {
+	display: block;
+	width: 1.5em;
+	height: 1.5em;
+	margin: 0 auto;
+	fill: currentColor;
+}
+
+main {
 	position: relative;
+	width: 100%;
+}
+
+.content {
+	text-align: center;
+}
+
+.info {
+	display: block;
+	max-width: 260px;
+	margin: 0 1rem;
+	font-weight: bold;
+}
+
+.page-header__title {
+	font-size: 1rem;
+	margin: 0;
+}
+
+.page-header__title-inner {
+	position: relative;
+	line-height: 1.25;
+	margin: 0 0.5rem 0 0;
+	padding: 0 1rem 0 0;
+}
+
+.page-header__title-inner::after {
+	content: "";
+	right: 0;
+	width: 3px;
+	height: 1.25rem;
+	background: currentColor;
+	position: absolute;
+}
+
+.page-header__title-sub {
+	position: relative;
+}
+
+.social {
+	display: none;
+}
+
+.social__item {
+	display: block;
+	font-size: 0.75rem;
+	margin: 0 0.25rem;
+}
+
+.slideshow {
+	position: relative;
+	width: 100%;
+	margin-top: 1rem;
+}
+
+.slideshow::after {
+	content: "";
+	position: absolute;
+	top: 0;
+	left: 0;
+	width: 100%;
 	height: 100%;
-	border-radius: 25px;
-	background-image: url("https://images.unsplash.com/photo-1559963110-71b394e7494d?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=675&q=80");
-	width: 300px;
-	-webkit-box-shadow: 0 0 20px -10px rgba(0, 0, 0, 0.2);
-	        box-shadow: 0 0 20px -10px rgba(0, 0, 0, 0.2);
-	-webkit-transition: -webkit-transform 300ms ease;
-	transition: -webkit-transform 300ms ease;
-	-o-transition: transform 300ms ease;
-	transition: transform 300ms ease;
-	transition: transform 300ms ease, -webkit-transform 300ms ease;
-	-webkit-transform: translateZ(0) scale(1.02) perspective(1000px);
-	        transform: translateZ(0) scale(1.02) perspective(1000px);
-	float: left;
+	background: rgba(0, 0, 0, 0.4);
+	z-index: 1000;
+	opacity: 0;
+	transition: opacity 0.4s;
 }
 
-.weather-side:hover {
-	-webkit-transform: scale(1.1) perspective(1500px) rotateY(10deg);
-	        transform: scale(1.1) perspective(1500px) rotateY(10deg);
+.slideshow--details::after {
+	opacity: 1;
 }
 
-.weather-gradient {
+.slide {
+	width: 100%;
+	height: 50vh;
+	top: 0;
+	left: 0;
+	position: absolute;
+	overflow-x: hidden;
+	pointer-events: none;
+	opacity: 0;
+}
+
+.slide--current {
+	opacity: 1;
+	z-index: 999;
+	pointer-events: auto;
+	position: relative;
+}
+
+.slide__wrap {
+	width: 100%;
+	height: 50vh;
+	overflow: hidden;
+	position: relative;
+}
+
+.slide__bg,
+.slide__img {
+	width: 100%;
+	height: 100%;
+	left: 0;
+	top: 0;
+	background-color: white;
+	background-size: cover;
+	background-position: 50% 50%;
+	position: absolute;
+	pointer-events: none;
+}
+
+.slide__bg {
+	filter: grayscale(1) brightness(0.7);
+}
+
+.slide__title-wrap {
+	padding: 2rem 1rem 0;
+	text-align: center;
 	position: absolute;
 	width: 100%;
 	height: 100%;
 	top: 0;
 	left: 0;
-	background-image: var(--gradient);
-	border-radius: 25px;
-	opacity: 0.8;
 }
 
-.date-container {
-	position: absolute;
-	top: 25px;
-	left: 25px;
-}
-
-.date-dayname {
+.slide__title {
 	margin: 0;
+	font-size: 3.5rem;
+	line-height: 0.9;
+	white-space: pre;
+	text-align: left;
 }
 
-.date-day {
-	display: block;
-}
-
-.location {
+.slide__title span {
 	display: inline-block;
-	margin-top: 10px;
 }
 
-.location-icon {
-	display: inline-block;
-	height: 0.8em;
-	width: auto;
-	margin-right: 5px;
+.slide__subtitle {
+	font-size: 1.15rem;
+	font-weight: normal;
+	text-align: left;
 }
 
-.weather-container {
+.boxnav {
 	position: absolute;
-	bottom: 25px;
-	left: 25px;
-}
-
-.weather-icon.feather {
-	height: 60px;
-	width: auto;
-}
-
-.weather-temp {
-	margin: 0;
-	font-weight: 700;
-	font-size: 4em;
-}
-
-.weather-desc {
-	margin: 0;
-}
-
-.info-side {
-	position: relative;
-	float: left;
-	height: 100%;
-	padding-top: 25px;
-}
-
-.today-info {
-	padding: 15px;
-	margin: 0 25px 25px 25px;
-/* 	box-shadow: 0 0 50px -5px rgba(0, 0, 0, 0.25); */
-	border-radius: 10px;
-}
-
-.today-info>div:not(:last-child) {
-	margin: 0 0 10px 0;
-}
-
-.today-info>div .title {
-	float: left;
-	font-weight: 700;
-}
-
-.today-info>div .value {
-	float: right;
-}
-
-.week-list {
-	list-style-type: none;
-	padding: 0;
-	margin: 10px 35px;
-	-webkit-box-shadow: 0 0 50px -5px rgba(0, 0, 0, 0.25);
-	        box-shadow: 0 0 50px -5px rgba(0, 0, 0, 0.25);
-	border-radius: 10px;
-	background: #
-}
-
-.week-list>li {
-	float: left;
-	padding: 15px;
-	cursor: pointer;
-	-webkit-transition: 200ms ease;
-	-o-transition: 200ms ease;
-	transition: 200ms ease;
-	border-radius: 10px;
-}
-
-.week-list>li:hover {
-	-webkit-transform: scale(1.1);
-	    -ms-transform: scale(1.1);
-	        transform: scale(1.1);
-	background: #fff;
-	color: #222831;
-	-webkit-box-shadow: 0 0 40px -5px rgba(0, 0, 0, 0.2);
-	        box-shadow: 0 0 40px -5px rgba(0, 0, 0, 0.2)
-}
-
-.week-list>li.active {
-	background: #fff;
-	color: #222831;
-	border-radius: 10px;
-}
-
-.week-list>li .day-name {
-	display: block;
-	margin: 10px 0 0 0;
-	text-align: center;
-}
-
-.week-list>li .day-icon {
-	display: block;
-	height: 30px;
-	width: auto;
-	margin: 0 auto;
-}
-
-.week-list>li .day-temp {
-	display: block;
-	text-align: center;
-	margin: 10px 0 0 0;
-	font-weight: 700;
-}
-
-.location-container {
-	padding: 25px 35px;
-}
-
-.location-button {
-	outline: none;
+	bottom: 0;
+	left: 0;
+	display: flex;
+	z-index: 1000;
 	width: 100%;
-	-webkit-box-sizing: border-box;
-	        box-sizing: border-box;
-	border: none;
-	border-radius: 25px;
-	padding: 10px;
-	font-family: 'Montserrat', sans-serif;
-	background-image: var(--gradient);
-	color: #ffffff;
-	font-weight: 700;
-	-webkit-box-shadow: 0 0 30px -5px rgba(0, 0, 0, 0.25);
-	        box-shadow: 0 0 30px -5px rgba(0, 0, 0, 0.25);
+}
+
+.boxnav__item {
+	display: flex;
+	align-items: center;
+	justify-content: center;
+	background: var(--color-nav-bg);
+	border: 0;
+	height: 4rem;
+	flex: 1;
+}
+
+.boxnav__item--prev:hover,
+.boxnav__item--next:hover {
+	color: var(--color-nav-hover);
+}
+
+.boxnav__item:focus {
+	outline: none;
+}
+
+.boxnav__label {
+	padding: 0 0.5rem;
+	font-size: 1.15rem;
+	position: relative;
+}
+
+.boxnav__label--total::before {
+	content: "";
+	position: absolute;
+	right: 100%;
+	top: 0;
+	width: 2px;
+	height: 1.45rem;
+	background: #000;
+	transform: rotate(22.5deg);
+}
+
+.icon--caret-rot {
+	transform: rotate(180deg);
+}
+
+.details-wrap {
+	position: relative;
+	pointer-events: none;
+	width: 100%;
+	z-index: 10000;
+}
+
+.details {
+	position: absolute;
+	top: 0;
+	right: 0;
+	width: 100%;
+	display: grid;
+	grid-auto-rows: 80px;
+	overflow: hidden;
+}
+
+.details-wrap--open .details--current {
+	pointer-events: auto;
+}
+
+.details__item {
+	overflow: hidden;
+}
+
+.details__item--addtocart {
+	grid-row: 4;
+}
+
+.details__inner {
+	width: 100%;
+	height: 100%;
+}
+
+.details__inner {
+	display: flex;
+	align-items: center;
+	justify-content: space-around;
+	transform: translate3d(100%, 0, 0);
+}
+
+.details__item-img {
+	display: none;
+}
+
+.details__inner--sizes {
+	background: #d4d4d4;
+}
+
+.details__size {
+	position: relative;
 	cursor: pointer;
-	-webkit-transition: -webkit-transform 200ms ease;
-	transition: -webkit-transform 200ms ease;
-	-o-transition: transform 200ms ease;
-	transition: transform 200ms ease;
-	transition: transform 200ms ease, -webkit-transform 200ms ease;
 }
 
-.location-button:hover {
-	-webkit-transform: scale(0.95);
-	    -ms-transform: scale(0.95);
-	        transform: scale(0.95);
+.details__size--selected::before {
+	content: "";
+	position: absolute;
+	width: 2rem;
+	height: 2rem;
+	top: 50%;
+	left: 50%;
+	margin: -1rem 0 0 -1rem;
+	border: 2px solid #333;
+	border-radius: 50%;
 }
 
-.location-button .feather {
-	height: 1em;
-	width: auto;
-	margin-right: 5px;
+.details__size--disabled {
+	color: #d42d2d;
+	cursor: not-allowed;
+}
+
+.details__inner--price {
+	background: #6ff8ed;
+	color: rgb(2, 2, 2);
+	font-size: 1.55rem;
+}
+
+.details__inner--colors {
+	background: rgba(255, 255, 255, 0.007);
+	backdrop-filter: blur(20px);
+}
+
+.details__color {
+	width: 1.5rem;
+	height: 1.5rem;
+	overflow: hidden;
+	color: transparent;
+	border-radius: 50%;
+	align-self: center;
+	justify-self: center;
+	cursor: pointer;
+}
+
+.details__color--WhiteBlack {
+	background: rgb(255, 255, 255);
+	background: linear-gradient(
+		90deg,
+		rgba(255, 255, 255, 1) 20%,
+		rgba(0, 0, 0, 1) 100%
+	);
+}
+
+.details__color--BeigeGray {
+	background: rgb(240, 190, 143);
+	background: linear-gradient(
+		90deg,
+		rgb(240, 190, 143) 20%,
+		rgb(92, 84, 84) 100%
+	);
+}
+
+.details__color--BlueBlack {
+	background: rgb(16, 134, 245);
+	background: linear-gradient(
+		90deg,
+		rgb(16, 134, 245) 20%,
+		rgba(0, 0, 0, 1) 100%
+	);
+}
+
+.details__color--PinkBlack {
+	background: rgb(134, 16, 245);
+	background: linear-gradient(
+		90deg,
+		rgb(134, 16, 245) 20%,
+		rgba(0, 0, 0, 1) 100%
+	);
+}
+
+.details__color--WhiteRedBlue {
+	background: rgb(255, 255, 255);
+	background: linear-gradient(
+		90deg,
+		rgba(255, 255, 255, 1) 10%,
+		rgba(121, 9, 9, 1) 45%,
+		rgba(0, 212, 255, 1) 100%
+	);
+}
+
+.details__color--WhiteGreenBlack {
+	background: rgb(255, 255, 255);
+	background: linear-gradient(
+		90deg,
+		rgba(255, 255, 255, 1) 10%,
+		rgb(4, 233, 138) 45%,
+		rgb(0, 0, 0) 100%
+	);
+}
+
+.details__color--red {
+	background: #ff0000;
+}
+
+.details__color--green {
+	background: #32f8a5;
+}
+
+.details__color--sky {
+	background: #add8e6;
+}
+
+.details__inner--grid {
+	display: grid;
+	padding: 1rem;
+	grid-template-columns: repeat(3, 1fr);
+}
+
+.action {
+	border: 0;
+	padding: 0;
+	flex: 1;
+	align-self: stretch;
+	background: none;
+}
+
+.action--addtocart {
+	background: #6ff8ed;
+	color: var(--color-cart-bg);
+}
+
+.action--close {
+	background: var(--color-cart-bg);
+	color: #6ff8ed;
+	text-transform: lowercase;
+}
+
+.action--details {
+	position: absolute;
+	z-index: 3000;
+	top: 100%;
+	font-weight: bold;
+	font-size: 1.15rem;
+	width: 100%;
+	background: #000;
+	padding: 1rem;
+	color: #fff;
+}
+
+@media screen and (min-width: 53em) {
+	body {
+		padding: 0;
+	}
+	.content {
+		position: relative;
+		display: flex;
+		justify-content: center;
+		align-items: center;
+		margin: 0 auto;
+		min-height: 100vh;
+		text-align: left;
+	}
+	.content--fixed {
+		position: fixed;
+		z-index: 10000;
+		top: 0;
+		left: 0;
+		display: grid;
+		align-content: space-between;
+		width: 100%;
+		max-width: none;
+		min-height: 0;
+		height: 100vh;
+		padding: 1.5rem 4rem 2rem;
+		pointer-events: none;
+		align-items: start;
+		grid-template-columns: 50% 50%;
+		grid-template-rows: auto auto auto;
+		grid-template-areas:
+			"pageheader ..."
+			"... ..."
+			"tagline ...";
+	}
+
+	.page-header {
+		grid-area: pageheader;
+		align-self: start;
+		justify-self: start;
+		position: relative;
+		display: flex;
+		padding: 1.25rem 1.5rem 1.25rem 0;
+		pointer-events: none;
+	}
+	.page-header::before {
+		content: "";
+		background: #000;
+		width: calc(100% + 4rem);
+		height: 100%;
+		position: absolute;
+		left: -4rem;
+		top: 0;
+		transform: translate3d(-100%, 0, 0) translate3d(2rem, 0, 0);
+		transition: transform 0.3s;
+		pointer-events: auto;
+	}
+	.page-header:hover::before {
+		transform: translate3d(0, 0, 0);
+	}
+	.page-header::after {
+		content: "";
+		width: 17rem;
+		height: 100%;
+		position: absolute;
+		left: -2rem;
+		top: 0;
+		pointer-events: auto;
+	}
+	.page-header__title {
+		transition: color 0.3s;
+	}
+	.page-header:hover .page-header__title {
+		color: #fff;
+	}
+	.social {
+		display: flex;
+		list-style: none;
+		margin: 0 0 0 3rem;
+		padding: 0;
+		position: relative;
+		opacity: 0;
+		pointer-events: none;
+		transition: opacity 0.3s;
+	}
+	.social__item-link {
+		color: #fff;
+	}
+	.icon--social {
+		opacity: 0;
+		transform: translate3d(0, 150%, 0);
+		transition: opacity 0.2s linear, transform 0.8s cubic-bezier(0.2, 1, 0.3, 1);
+		transition-delay: 0.05s;
+	}
+	.icon--instagram {
+		transition-delay: 0.1s;
+	}
+	.icon--facebook {
+		transition-delay: 0.15s;
+	}
+	.page-header:hover .social {
+		opacity: 1;
+		pointer-events: auto;
+	}
+	.page-header:hover .social__item-link .icon {
+		opacity: 1;
+		transform: translate3d(0, 0, 0);
+	}
+	.content--fixed a {
+		pointer-events: auto;
+	}
+
+	.tagline {
+		margin: 0;
+		grid-area: tagline;
+		-webkit-writing-mode: vertical-rl;
+		writing-mode: vertical-rl;
+		transform: rotate(180deg);
+	}
+	.slideshow {
+		overflow: hidden;
+		margin: 0;
+		height: 100vh;
+	}
+	.slide {
+		height: 100vh;
+	}
+	.slide__title-wrap {
+		padding: calc(6rem + 10vh) 0 0 4rem;
+		text-align: left;
+	}
+	.slide__title {
+		font-size: 4.5vw;
+	}
+	.slide__subtitle {
+		margin: 1rem 0 0 0.2rem;
+		max-width: 300px;
+	}
+	.slide__wrap {
+		height: 100%;
+		position: absolute;
+	}
+	.slide__bg,
+	.slide__img {
+		background-position: 50% 70%;
+	}
+	.boxnav {
+		left: auto;
+		right: 60vw;
+		width: auto;
+	}
+	.boxnav__item {
+		width: 10vw;
+		height: 12vw;
+		flex: none;
+	}
+	.details-wrap {
+		position: absolute;
+		top: 0;
+		right: 0;
+		pointer-events: none;
+	}
+	.details {
+		width: auto;
+		grid-template-columns: 8rem 15rem 200px;
+		grid-template-rows: 125px 125px 7rem 3.5rem;
+	}
+	.details__item-img {
+		display: block;
+		grid-area: 1 / 3 / 3 / 4;
+		max-width: 100%;
+	}
+	.details__item-sizes {
+		grid-area: 1 / 2 / 2 / 3;
+	}
+	.details__item-price {
+		grid-area: 1 / 1 / 2 / 2;
+	}
+	.details__item-colors {
+		grid-area: 2 / 2 / 3 / 3;
+	}
+	.details__item--addtocart {
+		grid-area: 3 / 3 / 4 / 4;
+	}
+	.details__item--close {
+		grid-area: 4 / 3 / 5 / 4;
+	}
+	.details__inner--grid {
+		grid-template-columns: repeat(3, 1.5rem);
+	}
+	.action--details {
+		top: calc(6rem + 10vh);
+		right: 4rem;
+		left: auto;
+		background: none;
+		color: inherit;
+		width: auto;
+		padding: 0;
+	}
+	.action--details:hover {
+		color: var(--color-details-hover);
+	}
 }
